[gd_scene load_steps=14 format=3 uid="uid://ch3pkshh20074"]

[ext_resource type="Script" uid="uid://cdnsxy6l56giw" path="res://scenes/player.gd" id="1_dqkch"]
[ext_resource type="Texture2D" uid="uid://2btnw5s5rres" path="res://assets/characters/default-arm.svg" id="1_qhqgy"]
[ext_resource type="PackedScene" uid="uid://t01pmgdfsgjj" path="res://scenes/weapons/pistol.tscn" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://cgffb7dtrts05" path="res://assets/characters/default-body.svg" id="3_qlg0r"]
[ext_resource type="PackedScene" uid="uid://drw5d8axmoyh8" path="res://scenes/health_bar.tscn" id="5_qlg0r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tuyoq"]
radius = 44.0

[sub_resource type="Animation" id="Animation_dqkch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms/LeftArm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms/RightArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms/RightArm/Hand:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Arms:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "equip1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms/LeftArm:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms/RightArm:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -0.523599]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms/RightArm/Hand:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 0.523599]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Arms:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "equip2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms/LeftArm:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms/RightArm:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -0.523599]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms/RightArm/Hand:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Arms:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.785398]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "spin"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785398, -5.49779]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "swing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785398, -0.785398, 0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"RESET": SubResource("Animation_dqkch"),
&"equip1": SubResource("Animation_qhqgy"),
&"equip2": SubResource("Animation_qlg0r"),
&"spin": SubResource("Animation_fjrip"),
&"swing": SubResource("Animation_tuyoq")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dqkch"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:dead")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:visible")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:modulate:a")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:collision_layer")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:collision_mask")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("Body/Arms:visible")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath("Body:rotation")
properties/8/spawn = true
properties/8/replication_mode = 2

[node name="Player" type="CharacterBody2D" groups=["Object", "Player"]]
scale = Vector2(0.5, 0.5)
collision_mask = 3
motion_mode = 1
script = ExtResource("1_dqkch")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("3_qlg0r")

[node name="Arms" type="Node2D" parent="Body"]
show_behind_parent = true

[node name="LeftArm" type="Node2D" parent="Body/Arms"]
position = Vector2(19.2, -25.6)
rotation = 1.5708

[node name="Arm" type="Sprite2D" parent="Body/Arms/LeftArm"]
position = Vector2(24, 0)
texture = ExtResource("1_qhqgy")

[node name="RightArm" type="Node2D" parent="Body/Arms"]
position = Vector2(19.2, 25.6)
rotation = -1.5708

[node name="Arm" type="Sprite2D" parent="Body/Arms/RightArm"]
position = Vector2(24, 0)
texture = ExtResource("1_qhqgy")

[node name="Hand" type="Node2D" parent="Body/Arms/RightArm"]
position = Vector2(51.6, 0.232)
rotation = -1.5708

[node name="Pistol" parent="Body/Arms/RightArm/Hand" instance=ExtResource("2_dqkch")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tuyoq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[node name="UseCooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
process_callback = 0
limit_enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_dqkch")

[node name="HealthBar" parent="." instance=ExtResource("5_qlg0r")]
type = "Player"
kill_experience = 0

[connection signal="timeout" from="UseCooldownTimer" to="." method="_on_use_cooldown_timer_timeout"]

[editable path="Body/Arms/RightArm/Hand/Pistol"]
